app/frontend/app/globals.css
/* ... */
/* <h3> titles for Information page */
h3.information-sub-header {
  margin-top: 12px !important;
}

/* Color gradients for different sections on Information page */
.information-intro {
  background-color: #0fc02c;
  background: -webkit-linear-gradient(#0fc02c, #abff96);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.information-scrapes {
  background-color: #ddb32a;
  background: -webkit-linear-gradient(#ddb32a, #ffefa6);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.information-benchmarks {
  background-color: #d31e27;
  background: -webkit-linear-gradient(#d31e27, #ff6a6a);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.information-mct {
  background-color: #6c53fc;
  background: -webkit-linear-gradient(#6c53fc, #b7aaff);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Text for <p> tags on Information page */
.information-text {
  margin: 0;
  margin-top: 2px;
  padding-left: 2px;
}

/* Text just below <h1> tag on Information page */
.information-top-text {
  font-size: x-large;
}

/* Container to show Price/Performance Score formula on Information Page */
.formula-container {
  background-color: #353535;
  background: linear-gradient(to top left, rgb(32, 32, 32) 30%, rgb(51, 51, 51) 100%);
  width: fit-content;
  padding: 3px 15px 7px;
  border-radius: 10px;
  color: #fafafa;
  font-size: 24px;
  margin-top: 7px;
  font-weight: 600;
  border: 1px solid rgba(200, 200, 200, 0.5);
}

/* Adjust formula-container for very small screens */
@media (max-width: 420px) {
  .formula-container {
    font-size: large;
    font-weight: 500;
    padding-top: 3px;
    padding-bottom: 4px;
  }
}

/* Wrapper for content on Manual Comparison Tool page */
.mct-wrapper {
  margin-top: 18px;
  position: relative;
}

/* Buttons to Add or Delete Row for the Manual Comparison Tool Table */
.table-mod-button {
  margin-left: 2px;
  margin-top: 0px;
  margin-bottom: 8px;
  margin-right: 4px;
  padding-left: 7px;
  padding-bottom: 2px;
  padding-top: 4px;
  font-size: large;
  font-weight: 700;
}

/* SVG Icons for table-mod-buttons */
.table-mod-button svg {
  margin-top: -4px;
}

/* Table for values to be calculated in Manual Comparison Tool */
.mct-table {
  margin: 0;
  margin-top: 5px;
  background-color: #1e1e1f;
  border-radius: 10px;
}

/* Styling for <th> tags in mct-table */
.mct-table-head {
  padding-top: 5px !important;
  padding-bottom: 8px !important;
  padding-left: 18px !important;
}

.mct-table-head-last {
  padding-top: 3px !important;
  padding-bottom: 10px !important;
}

/* Styling for <td> tags in mct-table */
.mct-table td {
  padding: 0 6px 0 12px;
}

/* Container for text input fields in mct-table */
.mct-table label {
  margin: 0;
}

/* Styling for text input fields in mct-table */
.mct-table input {
  margin: 10px;
  padding: 5px;
  max-height: 40px;
  margin-left: 2px !important;
}

/* Styling for text in Price/Performance Score <td> column */
.mct-pps {
  font-size: x-large;
  margin-left: 10px;
  color: #00b7ff;
}

/* Adjust mct-pps text for smaller screens */
@media (max-width: 649px) {
  .mct-pps {
    font-size: larger;
    margin-left: 4px;
  }
}

/* Button to calculate inputted values in Manual Comparison Tool Table */
.mct-calculate-button {
  margin-top: 10px;
  margin-left: 3px;
  background-color: rgb(3, 151, 232);
  background: linear-gradient(to top left, rgb(77, 238, 253) 0.7%, rgb(3, 151, 232) 26.1%, rgb(47, 31, 116) 95.7%);
  font-size: xx-large;
  color: #ffffff;
  border-color: #f1f1f1;
  transition: ease 0.15;
}

.mct-calculate-button:hover {
  border-color: #ffffff;
  box-shadow: 0px 0px 10px 1px #ffffff;
}

.mct-calculate-button:active {
  color: rgb(50, 50, 50);
  border-color: rgb(50, 50, 50);
  box-shadow: none;
}

/* Container for text below Manual Comparison Tool Table */
.mct-text-container {
  margin: 5px;
}

/* Text in <p> tag in mct-text-container */
.mct-text {
  margin: 0;
}

/* Button to take you to Start Scrape page from Home page */
.start-button-home {
  background: linear-gradient(to top left, rgb(77, 238, 253) 0.7%, rgb(3, 151, 232) 26.1%, rgb(47, 31, 116) 95.7%);
  max-width: fit-content;
  padding: 1px 16px 5px;
  border-radius: 12px;
  border-color: #3787ff;
  margin: 0;
  margin-top: 2px;
}

.start-button-home:hover {
  border-color: #ffffff;
  box-shadow: 0px 0px 10px 1px #ffffff;
}

@media (max-width: 1199px) {
  .benchmark-table-tabs {
    padding: 2px 10px;
    font-size: 22px;
  }
  .benchmark-table-tab-cpu-n {
    width: 45%;
  }
  .benchmark-table td {
    padding: 7px 19px;
  }
  .view-all-scrapes-button {
    font-size: 20px;
  }
  .clear-items-button {
    padding-bottom: 2px;
    font-size: 22px;
  }
  .formula-container {
    font-size: 22px;
    padding: 2px 14px 5px;
  }
}

@media (max-width: 991px) {
  .benchmark-table-tabs {
    font-size: 20px;
  }
  .benchmark-table-tab-cpu-n {
    width: 55%;
  }
  .benchmark-table-head {
    padding-right: 15px !important;
    padding-left: 15px !important;
  }
  .benchmark-table td {
    padding: 6px 15px;
  }
  .view-all-scrapes-button {
    font-size: 18px;
  }
  .clear-items-button {
    font-size: 20px;
  }
  .formula-container {
    font-size: 20px;
    padding: 2px 12px 5px;
  }
}

@media (max-width: 767px) {
  .benchmark-table-tabs {
    padding: 4px 10px;
    font-size: 16px;
    font-weight: 600;
  }
  .benchmark-table-tab-cpu-n {
    width: 60%;
  }
  .benchmark-table td {
    padding: 5px 15px;
  }
  .benchmark-table-data {
    font-weight: 600;
  }
  .view-all-scrapes-button {
    font-size: 16px;
  }
  .clear-items-button {
    font-size: 18px;
    padding-left: 12px;
    padding-right: 12px;
  }
  .formula-container {
    font-size: 18px;
    padding: 2px 11px 4px;
  }
}
/* ... */

